--- a/package.json
+++ b/package.json
@@ -7,9 +7,17 @@
     "@types/node": "10.12.18",
     "@types/react": "16.7.18",
     "@types/react-dom": "16.0.11",
+    "@types/react-redux": "^6.0.12",
+    "@types/styled-components": "^4.1.4",
+    "axios": "^0.18.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-icons": "^3.2.2",
+    "react-redux": "^6.0.0",
     "react-scripts": "2.1.3",
+    "redux": "^4.0.1",
+    "redux-saga": "^0.16.2",
+    "styled-components": "^4.1.3",
     "typescript": "3.2.2"
   },
   "scripts": {
