--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/react": "16.7.18",
     "@types/react-dom": "16.0.11",
     "@types/react-redux": "^6.0.12",
+    "@types/redux-mock-store": "^1.0.0",
     "@types/styled-components": "^4.1.4",
     "axios": "^0.18.0",
     "gh-pages": "^2.0.1",
@@ -18,12 +19,14 @@
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.3",
     "redux": "^4.0.1",
+    "redux-mock-store": "^1.5.3",
     "redux-saga": "^0.16.2",
     "styled-components": "^4.1.3",
     "typescript": "3.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
+    "test": "react-scripts test --env=jsdom",
     "build": "react-scripts build",
     "predeploy": "yarn run build",
     "deploy": "gh-pages -d build"
