--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://jkirkyuan.github.io/toronto-waste",
   "dependencies": {
     "@types/jest": "23.3.12",
+    "@types/lodash": "^4.14.119",
     "@types/node": "10.12.18",
     "@types/react": "16.7.18",
     "@types/react-dom": "16.0.11",
